# lcdui

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
lcdui/: canvas.py  display.py  event.py  focus.py  main.py  utils.py  window.py
lcdui/views/: __init__.py  button.py  checkbox.py  layout.py  lineinput.py  list.py  pagescroll.py  radio.py  scrollbar.py  text.py  window.py
tests/: test_display.py  test_lcdui.py  utils.py
