[tool.poetry]
name = "lcdui"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zuev <zuev08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
RPLCD = "^1.3.0"
smbus = { version = "^1.1.post2", markers = "sys_platform == 'linux'" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
